Added user auth and registration

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -42,7 +42,7 @@
 
                     <!-- login -->
                     <li class="nav-item">
-                        <a class="nav-link disabled" tabindex="-1" aria-disabled="true">Login</a>
+                        <a class="nav-link" tabindex="-1" aria-disabled="true" th:href="@{/signin}">Login</a>
                     </li>
 
                     <!-- signup -->
