--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
                 <div id="login-row" class="row justify-content-center align-items-center">
                     <div id="login-column" class="col-md-6">
                         <div id="login-box" class="col-md-12">
-                            <form id="login-form" class="form" action="@{/signin}" method="post">
+                            <form id="login-form" class="form" th:action="@{/signin}" method="post">
                                 <h3 class="text-center text-info">Login</h3>
                                 <div th:if="${param.error}" class="alert alert-danger">
                                     Invalid username or password
@@ -33,7 +33,7 @@
                                     <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                                 </div>
                                 <div id="register-link" class="text-right">
-                                    <a href="/signup" class="text-info">Register here</a>
+                                    <a href="/signup/" class="text-info">Register here</a>
                                 </div>
                             </form>
                         </div>
