--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -37,3 +37,70 @@ body {
 #login .container #login-row #login-column #login-box #login-form #register-link {
     margin-top: -85px;
 }
+
+/* side bar */
+@media only screen and (max-width){
+    .sidebar{
+        display: none;
+        width: 80%;
+        background: white;
+        height: 100vh;
+        position: fixed;
+        padding-top: 20px;
+    }
+    .content{
+        margin-left: 0%!important;
+    }
+}
+
+.sidebar{
+    width: 18%;
+    background: white;
+    height: 100%;
+    position: fixed;
+    padding-top: 45px;
+    transition: 0.3s;
+    overflow-x: hidden;
+    z-index: 1;
+}
+
+.sidebar .crossBtn{
+    position: absolute;
+    top: 0%;
+    right: 35px;
+    font-size: 35px;
+    cursor: pointer;
+}
+
+/* targeting anchor tags in side bar */
+.sidebar a{
+    display: block;
+    width: 100%;
+    padding: 10px 25px;
+    text-decoration: none;
+    color: gray;
+}
+
+.sidebar a:hover{
+    background: #e2e2e2;
+}
+
+.sidebar .divider{
+    height: .5px;
+    width: 100%;
+    background: #e2e2e2;
+    margin-top: 10px;
+}
+
+/* content */
+.content{
+    margin-left: 20%;
+}
+
+.my_profile_picture{
+    width: 35px;
+    height: 35px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 1px solid black;
+}
